[package]
name = "cyberspace_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "cyberspace_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cyberspace-sim"
path = "src/bin/simulation.rs"

[[bin]]
name = "cyberspace-net"
path = "src/bin/network.rs"

[dependencies]
wgpu = "0.19"
winit = "0.29"
glam = "0.27"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
bytemuck = { version = "1.15", features = ["derive"] }
pollster = "0.3"
anyhow = "1.0"
noise = "0.9"
rand = "0.8"
rayon = "1.10"
pcap = { version = "1.1", optional = true }

[features]
default = []
network-capture = ["pcap"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
